fixed line spacing in scratchpad

--- a/src/app/modules/shared-modules/Dialogue/scratchpad/scratchpad.component.css
+++ b/src/app/modules/shared-modules/Dialogue/scratchpad/scratchpad.component.css
@@ -46,5 +46,6 @@ body{
         border: none;
         outline: none;
         font-size: 20px;
+        line-height: 1.8;
     }
 
